fixup saros for portable eclipse win11 installation and add missing vmargs